[gd_scene load_steps=13 format=2]

[ext_resource path="res://player02Scene.gd" type="Script" id=1]
[ext_resource path="res://images/player02L1.png" type="Texture" id=2]
[ext_resource path="res://images/circle-64.png" type="Texture" id=3]
[ext_resource path="res://images/player02L3.png" type="Texture" id=4]
[ext_resource path="res://images/player02R1.png" type="Texture" id=5]
[ext_resource path="res://images/player02R2.png" type="Texture" id=6]
[ext_resource path="res://images/player02L4.png" type="Texture" id=7]
[ext_resource path="res://images/player02L2.png" type="Texture" id=8]
[ext_resource path="res://images/player02R3.png" type="Texture" id=9]
[ext_resource path="res://images/player02R4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "right",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "left",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[node name="player02" type="Area2D"]
collision_mask = 16383
script = ExtResource( 1 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "right"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20, 5 )
scale = Vector2( 3, 1.5 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -30, -20 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
color = Color( 0.968627, 0.968627, 0.992157, 0.839216 )
shadow_color = Color( 0.0784314, 0.0705882, 0.0705882, 0.721569 )

[node name="Timer" type="Timer" parent="."]

[node name="blink_timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
